# shadow_tracking

./: .gitignore  Mach.cpp  README.md  SYSTEM_DOCS.md  a.out  readable_code.md
Arduino/Cirial_tusin/: Cirial_tusin.ino
Arduino/main01/: main01.ino
Arduino/main02/: main02.ino
Kinect/kinectbase0/: README.md  a.out  g.txt  main.cpp  main00.cpp  main01.cpp
Kinect/kinectbase0/KinectSample/: main.cpp
LIDAR1b/: Connection_information.cpp  Connection_information.h  Lidar.h  README_LiDAR.md  Urg_driver.h  a.out  detect_os.h  footpoint.txt  lidarapp  main_cv.cpp  main_cv2.cpp  main_cv_02.cpp  scanarea.txt
Shadow/: Shadow_DOCS.md  a.out  main0.cpp  main01.cpp  main2.cpp  main2_docs.md  main2_documentation.md  main3.cpp  それぞれの影が動く.code-workspace
Shadow_big_LED/: README.md  a.out  main01.cpp  main01_Scan.cpp  main2.cpp
main/: LiDAR_serial  LiDAR_serial.cpp  config.h
scan/: CMakeLists.txt  main01_Scan.cpp  output_model.ply
shadowtest0621/: a.out  main0x.cpp  main0xのコピー.cpp  main0xのコピー2.cpp
shadowtest0621/LIDAR1x/: Connection_information.cpp  Connection_information.h  Lidar.h  a.out  datamaker.cpp  detect_os.h  footpoint0.txt  lidarapp  main_cv.cpp  scanarea.txt  scandata.txt
